--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Arrow tech example</title>
 
     <!-- Add css file -->
-    <link rel="stylesheet" href="./resources/css/styles.css" />
-    <link rel="stylesheet" href="./resources/css/responsive.css" />
-    <link rel="stylesheet" href="./resources/css/sidebar.css" />
+    <link rel="stylesheet" href="./resources/sass/main.css" />
     <!-- Add font awesome  -->
     <link
       rel="stylesheet"
@@ -27,6 +25,17 @@
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css"
+    />
 
     <!-- add js file -->
   </head>
@@ -98,7 +107,7 @@
     </header>
 
     <section class="row">
-      <div class="section-overview">
+      <div class="section-overview" id="section-overview__mobile">
         <div class="section-overview__item">
           <img src="resources/images/aht-overview1.jpg" alt="" />
         </div>
@@ -144,8 +153,9 @@
     <section class="row section-product">
       <div class="section-product__tab">
         <button
-          class="section-product__tab--link active"
+          class="section-product__tab--link"
           onclick="openTab(event, 'tab1')"
+          id="defaultOpen"
         >
           Top Sellers
         </button>
@@ -333,13 +343,101 @@
           </div>
         </div>
       </div>
+      <div id="tab2" class="tabcontent">
+        <div class="tabcontent-card">
+          <div class="tabcontent-card__img">
+            <img src="resources/images/aht-product-1.jpg" alt="" />
+          </div>
+          <h3>Body champ cardio</h3>
+          <h1>$342.00</h1>
+          <div class="tabcontent-card__action">
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-shopping-basket"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-eye"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-heart"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-exchange-alt"></i>
+            </div>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div class="tabcontent-card__img">
+            <img src="resources/images/aht-product-8.jpg" alt="" />
+          </div>
+          <h3>Fitness Gear Pro</h3>
+          <h1>$123.00</h1>
+          <div class="tabcontent-card__action">
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-shopping-basket"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-eye"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-heart"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-exchange-alt"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="tab3" class="tabcontent">
+        <div class="tabcontent-card">
+          <div class="tabcontent-card__img">
+            <img src="resources/images/ath-product-5.jpg" alt="" />
+          </div>
+          <h3>Weight Bench</h3>
+          <h1>$412.00</h1>
+          <div class="tabcontent-card__action">
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-shopping-basket"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-eye"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-heart"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-exchange-alt"></i>
+            </div>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div class="tabcontent-card__img">
+            <img src="resources/images/aht-product-2.jpg" alt="" />
+          </div>
+          <h3>Body Solid GCEC340</h3>
+          <h1>$214.00</h1>
+          <div class="tabcontent-card__action">
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-shopping-basket"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-eye"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-heart"></i>
+            </div>
+            <div class="tabcontent-card__action--icon">
+              <i class="fas fa-exchange-alt"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section class="row section-aboutus">
+    <section class="row section-aboutus" id="about-us">
       <h1>See What They Said About Us</h1>
-      <div class="slideshow-container">
+      <div class="slideshow-container single-item">
         <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
+        <div class="mySlides">
           <div class="slide-person">
             <img
               src="resources/images/aht-overview1.jpg"
@@ -350,11 +448,10 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
             aut inventore esse culpa itaque numquam harum! Consequuntur?
           </p>
-
-          <h2>Tran Tuyen</h2>
+          <h2>Tuyen tran</h2>
           <p>Happy clients</p>
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <div class="slide-person">
             <img
               src="resources/images/aht-overview1.jpg"
@@ -366,11 +463,10 @@
             debitis doloremque error maiores autem sed animi dolor a
             consectetur! Rerum fugiat repellat modi!
           </p>
-
           <h2>Vu Thien</h2>
           <p>Happy clients</p>
         </div>
-        <div class="mySlides fade">
+        <div class="mySlides">
           <div class="slide-person">
             <img
               src="resources/images/aht-overview1.jpg"
@@ -387,17 +483,17 @@
         </div>
 
         <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
       </div>
       <br />
 
       <!-- The dots/circles -->
-      <div style="text-align: center">
+      <!-- <div style="text-align: center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
-      </div>
+      </div> -->
     </section>
 
     <section class="row section-brand">
@@ -435,7 +531,7 @@
 
         <div class="footer-top__soical">
           <div class="footer-top__soical--icon">
-            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-facebook-f"></i></a>
           </div>
           <div class="footer-top__soical--icon">
             <a href=""><i class="fab fa-twitter"></i></a>
@@ -532,4 +628,18 @@
     src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
   ></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
+
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"
+  ></script>
+  <script>
+    $(".single-item").slick({
+      dots: true,
+    });
+  </script>
 </html>
