--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li class="header-top__main--link"><a href="#">Classes</a></li>
             <li class="header-top__main--link"><a href="#">Portfolio</a></li>
             <li class="header-top__main--link"><a href="#">Blog</a></li>
-            <li class="header-top__main--link"><a href="#">Contact</a></li>
+            <li class="header-top__main--link"><a href="#">Contacts</a></li>
           </ul>
           <ul class="header-top__right">
             <li class="header-top__right--icon">
