--- a/index.html
+++ b/index.html
@@ -94,11 +94,9 @@
           <h1>Dumbbells Shop</h1>
           <h3>Best body fitness</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit Illo
-            doloribus autem Veritatis dolorum hic laborum provident velit,
-            doloribus autem Veritatis dolorum hic laborum provident velit,
-            doloribus autem Veritatis dolorum hic laborum provident velit,
-            doloribus autem Veritatis dolorum hic laborum provident velit,
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer
           </p>
           <a href="" class="btn btn-ghost">Shop Now</a>
         </div>
