--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       </div>
       <nav>
         <div class="row header-top">
-          <h1 class="header-top__logo">
+          <div class="header-top__logo">
             <a href="index.html"
-              ><img src="resources/images/Logo.PNG" alt=""
+              ><img src="resources/images/Logo.PNG" alt="Logo"
             /></a>
-          </h1>
+          </div>
           <ul class="header-top__main" id="js--menu">
             <li class="header-top__main--link"><a href="#">Home</a></li>
             <li class="header-top__main--link"><a href="#">Pages</a></li>
@@ -107,11 +107,14 @@
     <section class="row">
       <div class="section-overview" id="section-overview__mobile">
         <div class="section-overview__item">
-          <img src="resources/images/aht-overview1.jpg" alt="" />
+          <img src="resources/images/aht-overview1.jpg" alt="aht-overview1" />
         </div>
         <div class="section-overview__item">
           <div class="overview-icon">
-            <img src="resources/images/aht-overview-icon-1.png" alt="" />
+            <img
+              src="resources/images/aht-overview-icon-1.png"
+              alt="aht-overview2"
+            />
           </div>
           <h2>Strength</h2>
           <p>
@@ -120,11 +123,14 @@
           </p>
         </div>
         <div class="section-overview__item">
-          <img src="resources/images/aht-overview2.jpg" alt="" />
+          <img src="resources/images/aht-overview2.jpg" alt="aht-overview2" />
         </div>
         <div class="section-overview__item">
           <div class="overview-icon">
-            <img src="resources/images/aht-overview-icon-2.png" alt="" />
+            <img
+              src="resources/images/aht-overview-icon-2.png"
+              alt="aht-overview2"
+            />
           </div>
           <h2>Dumbbells</h2>
           <p>
@@ -133,11 +139,14 @@
           </p>
         </div>
         <div class="section-overview__item">
-          <img src="resources/images/aht-overview3.jpg" alt="" />
+          <img src="resources/images/aht-overview3.jpg" alt="aht-overview1" />
         </div>
         <div class="section-overview__item">
           <div class="overview-icon">
-            <img src="resources/images/aht-overview-icon-4.png" alt="" />
+            <img
+              src="resources/images/aht-overview-icon-4.png"
+              alt="aht-overview1"
+            />
           </div>
           <h2>Power Rack & Cages</h2>
           <p>
@@ -174,7 +183,7 @@
       <div id="tab1" class="tabcontent">
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-1.jpg" alt="" />
+            <img src="resources/images/aht-product-1.jpg" alt="aht-overview1" />
           </div>
           <h3>Body champ cardio</h3>
           <h1>$342.00</h1>
@@ -195,7 +204,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-2.jpg" alt="" />
+            <img src="resources/images/aht-product-2.jpg" alt="aht-overview1" />
           </div>
           <h3>Body Solid GCEC340</h3>
           <h1>$214.00</h1>
@@ -216,7 +225,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-3.jpg" alt="" />
+            <img src="resources/images/aht-product-3.jpg" alt="aht-overview1" />
           </div>
           <h3>Bowflex BXE116 Elliptical</h3>
           <h1>$3200.00</h1>
@@ -237,7 +246,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-4.jpg" alt="" />
+            <img src="resources/images/aht-product-4.jpg" alt="aht-overview1" />
           </div>
           <h3>AFG Pro 7.2AI Incline</h3>
           <h1>$252.00</h1>
@@ -258,7 +267,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/ath-product-5.jpg" alt="" />
+            <img src="resources/images/ath-product-5.jpg" alt="aht-overview1" />
           </div>
           <h3>Weight Bench</h3>
           <h1>$412.00</h1>
@@ -279,7 +288,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-6.jpg" alt="" />
+            <img src="resources/images/aht-product-6.jpg" alt="aht-overview1" />
           </div>
           <h3>ProForm Hiit Trainer Lite 5.9</h3>
           <h1>$300.00</h1>
@@ -300,7 +309,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-7.jpg" alt="" />
+            <img src="resources/images/aht-product-7.jpg" alt="aht-overview1" />
           </div>
           <h3>ETHOS GHD</h3>
           <h1>$412.00</h1>
@@ -321,7 +330,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-8.jpg" alt="" />
+            <img src="resources/images/aht-product-8.jpg" alt="aht-overview1" />
           </div>
           <h3>Fitness Gear Pro</h3>
           <h1>$123.00</h1>
@@ -344,7 +353,7 @@
       <div id="tab2" class="tabcontent">
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-1.jpg" alt="" />
+            <img src="resources/images/aht-product-1.jpg" alt="aht-overview1" />
           </div>
           <h3>Body champ cardio</h3>
           <h1>$342.00</h1>
@@ -365,7 +374,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-8.jpg" alt="" />
+            <img src="resources/images/aht-product-8.jpg" alt="aht-overview1" />
           </div>
           <h3>Fitness Gear Pro</h3>
           <h1>$123.00</h1>
@@ -388,7 +397,7 @@
       <div id="tab3" class="tabcontent">
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/ath-product-5.jpg" alt="" />
+            <img src="resources/images/ath-product-5.jpg" alt="aht-overview1" />
           </div>
           <h3>Weight Bench</h3>
           <h1>$412.00</h1>
@@ -409,7 +418,7 @@
         </div>
         <div class="tabcontent-card">
           <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-2.jpg" alt="" />
+            <img src="resources/images/aht-product-2.jpg" alt="aht-overview1" />
           </div>
           <h3>Body Solid GCEC340</h3>
           <h1>$214.00</h1>
@@ -440,6 +449,7 @@
             <img
               src="resources/images/aht-overview1.jpg"
               style="width: 100%; height: 100%"
+              alt="aht-overview1"
             />
           </div>
           <p>
@@ -454,6 +464,7 @@
             <img
               src="resources/images/aht-overview1.jpg"
               style="width: 100%; height: 100%"
+              alt="aht-overview1"
             />
           </div>
           <p>
@@ -469,6 +480,7 @@
             <img
               src="resources/images/aht-overview1.jpg"
               style="width: 100%; height: 100%"
+              alt="aht-overview1"
             />
           </div>
           <p>
@@ -496,29 +508,29 @@
 
     <section class="row section-brand">
       <div class="section-brand__img">
-        <img src="resources/images/Brand 1.png" alt="" />
+        <img src="resources/images/Brand_1.png" alt="aht-overview1" />
       </div>
       <div class="section-brand__img">
-        <img src="resources/images/Brand 2.png" alt="" />
+        <img src="resources/images/Brand_2.png" alt="aht-overview1" />
       </div>
       <div class="section-brand__img">
-        <img src="resources/images/Brand 3.png" alt="" />
+        <img src="resources/images/Brand_6.png" alt="aht-overview1" />
       </div>
       <div class="section-brand__img">
-        <img src="resources/images/Brand 4.png" alt="" />
+        <img src="resources/images/Brand_5.png" alt="aht-overview1" />
       </div>
       <div class="section-brand__img">
-        <img src="resources/images/Brand 5.png" alt="" />
+        <img src="resources/images/Brand_3.png" alt="aht-overview1" />
       </div>
       <div class="section-brand__img">
-        <img src="resources/images/Brand 6.png" alt="" />
+        <img src="resources/images/Brand_4.png" alt="aht-overview1" />
       </div>
     </section>
 
     <footer>
       <div class="row footer-top">
         <div class="footer-top__logo">
-          <img src="resources/images/Logo-big.PNG" alt="" />
+          <img src="resources/images/Logo-big.PNG" alt="aht-overview1" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corrupti
@@ -615,29 +627,14 @@
         </h2>
       </div>
     </footer>
+    <script src="resources/js/main.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
+    <script>
+      $(".single-item").slick({
+        dots: true,
+      });
+    </script>
   </body>
-  <script src="resources/js/main.js"></script>
-  <script
-    type="text/javascript"
-    src="//code.jquery.com/jquery-1.11.0.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-  ></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"
-  ></script>
-  <script>
-    $(".single-item").slick({
-      dots: true,
-    });
-  </script>
 </html>
