--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <img src="resources/images/aht-product-1.jpg" alt="aht-overview1" />
           </div>
           <h3>Body champ cardio</h3>
-          <h1>$342.00</h1>
+          <h2>$342.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -207,7 +207,7 @@
             <img src="resources/images/aht-product-2.jpg" alt="aht-overview1" />
           </div>
           <h3>Body Solid GCEC340</h3>
-          <h1>$214.00</h1>
+          <h2>$214.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -228,7 +228,7 @@
             <img src="resources/images/aht-product-3.jpg" alt="aht-overview1" />
           </div>
           <h3>Bowflex BXE116 Elliptical</h3>
-          <h1>$3200.00</h1>
+          <h2>$3200.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -249,7 +249,7 @@
             <img src="resources/images/aht-product-4.jpg" alt="aht-overview1" />
           </div>
           <h3>AFG Pro 7.2AI Incline</h3>
-          <h1>$252.00</h1>
+          <h2>$252.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -270,7 +270,7 @@
             <img src="resources/images/ath-product-5.jpg" alt="aht-overview1" />
           </div>
           <h3>Weight Bench</h3>
-          <h1>$412.00</h1>
+          <h2>$412.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -291,7 +291,7 @@
             <img src="resources/images/aht-product-6.jpg" alt="aht-overview1" />
           </div>
           <h3>ProForm Hiit Trainer Lite 5.9</h3>
-          <h1>$300.00</h1>
+          <h2>$300.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -312,7 +312,7 @@
             <img src="resources/images/aht-product-7.jpg" alt="aht-overview1" />
           </div>
           <h3>ETHOS GHD</h3>
-          <h1>$412.00</h1>
+          <h2>$412.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -333,7 +333,7 @@
             <img src="resources/images/aht-product-8.jpg" alt="aht-overview1" />
           </div>
           <h3>Fitness Gear Pro</h3>
-          <h1>$123.00</h1>
+          <h2>$123.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -356,7 +356,7 @@
             <img src="resources/images/aht-product-1.jpg" alt="aht-overview1" />
           </div>
           <h3>Body champ cardio</h3>
-          <h1>$342.00</h1>
+          <h2>$342.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -377,7 +377,7 @@
             <img src="resources/images/aht-product-8.jpg" alt="aht-overview1" />
           </div>
           <h3>Fitness Gear Pro</h3>
-          <h1>$123.00</h1>
+          <h2>$123.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -400,7 +400,7 @@
             <img src="resources/images/ath-product-5.jpg" alt="aht-overview1" />
           </div>
           <h3>Weight Bench</h3>
-          <h1>$412.00</h1>
+          <h2>$412.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -421,7 +421,7 @@
             <img src="resources/images/aht-product-2.jpg" alt="aht-overview1" />
           </div>
           <h3>Body Solid GCEC340</h3>
-          <h1>$214.00</h1>
+          <h2>$214.00</h2>
           <div class="tabcontent-card__action">
             <div class="tabcontent-card__action--icon">
               <i class="fas fa-shopping-basket"></i>
@@ -628,7 +628,7 @@
       </div>
     </footer>
     <script src="resources/js/main.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="slick/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
     <script>
