--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       </div>
     </section>
 
-    <section class="row section-aboutus" id="about-us">
+    <section class="row about-us section-aboutus">
       <h2>See What They Said About Us</h2>
       <div class="slideshow-container single-item">
         <!-- Full-width images with number and caption text -->
