--- a/index.html
+++ b/index.html
@@ -105,54 +105,56 @@
     </header>
 
     <section class="row">
-      <div class="section-overview" id="section-overview__mobile">
-        <div class="section-overview__item">
-          <img src="resources/images/aht-overview1.jpg" alt="aht-overview1" />
-        </div>
-        <div class="section-overview__item">
-          <div class="overview-icon">
-            <img
-              src="resources/images/aht-overview-icon-1.png"
-              alt="aht-overview2"
-            />
+      <div class="overview-mobile">
+        <div class="section-overview" id="section-overview__mobile">
+          <div class="section-overview__item">
+            <img src="resources/images/aht-overview1.jpg" alt="aht-overview1" />
           </div>
-          <h2>Strength</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-            eligendi voluptatibus cumque.
-          </p>
-        </div>
-        <div class="section-overview__item">
-          <img src="resources/images/aht-overview2.jpg" alt="aht-overview2" />
-        </div>
-        <div class="section-overview__item">
-          <div class="overview-icon">
-            <img
-              src="resources/images/aht-overview-icon-2.png"
-              alt="aht-overview2"
-            />
+          <div class="section-overview__item">
+            <div class="overview-icon">
+              <img
+                src="resources/images/aht-overview-icon-1.png"
+                alt="aht-overview2"
+              />
+            </div>
+            <h2>Strength</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              eligendi voluptatibus cumque.
+            </p>
           </div>
-          <h2>Dumbbells</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
-            incidunt ad quibusdam?
-          </p>
-        </div>
-        <div class="section-overview__item">
-          <img src="resources/images/aht-overview3.jpg" alt="aht-overview1" />
-        </div>
-        <div class="section-overview__item">
-          <div class="overview-icon">
-            <img
-              src="resources/images/aht-overview-icon-4.png"
-              alt="aht-overview1"
-            />
+          <div class="section-overview__item">
+            <img src="resources/images/aht-overview2.jpg" alt="aht-overview2" />
           </div>
-          <h2>Power Rack & Cages</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
-            doloremque esse officia.
-          </p>
+          <div class="section-overview__item">
+            <div class="overview-icon">
+              <img
+                src="resources/images/aht-overview-icon-2.png"
+                alt="aht-overview2"
+              />
+            </div>
+            <h2>Dumbbells</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
+              incidunt ad quibusdam?
+            </p>
+          </div>
+          <div class="section-overview__item">
+            <img src="resources/images/aht-overview3.jpg" alt="aht-overview1" />
+          </div>
+          <div class="section-overview__item">
+            <div class="overview-icon">
+              <img
+                src="resources/images/aht-overview-icon-4.png"
+                alt="aht-overview1"
+              />
+            </div>
+            <h2>Power Rack & Cages</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+              doloremque esse officia.
+            </p>
+          </div>
         </div>
       </div>
     </section>
