--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         id="openSidebarMenu"
       />
       <label for="openSidebarMenu" class="sidebarIconToggle">
-        <div class="spinner diagonal part-1"></div>
-        <div class="spinner horizontal"></div>
-        <div class="spinner diagonal part-2"></div>
+        <span class="spinner diagonal part-1"></span>
+        <span class="spinner horizontal"></span>
+        <span class="spinner diagonal part-2"></span>
       </label>
       <div id="sidebarMenu">
         <ul class="sidebarMenuInner">
