--- a/index.html
+++ b/index.html
@@ -184,170 +184,210 @@
       <!-- Tab content -->
       <div id="tab1" class="tabcontent">
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-1.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Body champ cardio</h3>
-          <h2>$342.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-2.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Body Solid GCEC340</h3>
-          <h2>$214.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-3.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Bowflex BXE116 Elliptical</h3>
-          <h2>$3200.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-4.jpg" alt="aht-overview1" />
-          </div>
-          <h3>AFG Pro 7.2AI Incline</h3>
-          <h2>$252.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/ath-product-5.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Weight Bench</h3>
-          <h2>$412.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-6.jpg" alt="aht-overview1" />
-          </div>
-          <h3>ProForm Hiit Trainer Lite 5.9</h3>
-          <h2>$300.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-7.jpg" alt="aht-overview1" />
-          </div>
-          <h3>ETHOS GHD</h3>
-          <h2>$412.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-8.jpg" alt="aht-overview1" />
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
+            </div>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
+            </div>
           </div>
-          <h3>Fitness Gear Pro</h3>
-          <h2>$123.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+        </div>
+        <div class="tabcontent-card">
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div style="position: relative">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-1.jpg"
+                alt="aht-overview1"
+              />
+            </div>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -630,7 +670,6 @@
       </div>
     </footer>
     <script src="resources/js/main.js"></script>
-    <script src="slick/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
     <script>
