--- a/index.html
+++ b/index.html
@@ -6,37 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arrow tech example</title>
 
+    <link rel="stylesheet" href="./resources/css/all.min.css" />
     <!-- Add css file -->
     <link rel="stylesheet" href="./resources/sass/main.css" />
     <!-- Add font awesome  -->
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
-
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css"
-    />
-
+    <link rel="stylesheet" href="./resources/css/slick.css" />
+    <link rel="stylesheet" href="./resources/css/slick-theme.css" />
     <!-- add js file -->
   </head>
   <body>
@@ -670,8 +645,8 @@
       </div>
     </footer>
     <script src="resources/js/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
+    <script src="resources/js/jquery.min.js"></script>
+    <script src="resources/js/slick.min.js"></script>
     <script>
       $(".single-item").slick({
         dots: true,
